==> ARMmbed/mbed-os/connectivity/drivers/mbedtls/TARGET_NUVOTON/TARGET_M460/gcm/gcm_alt.c <==
#include "common.h"
#include "mbedtls/gcm.h"
#include "mbedtls/platform_util.h"
#include <string.h>
#include "config.h"
#include "mbedtls/aes.h"
#include "mbedtls/platform.h"
#include <stdio.h>
#define mbedtls_printf printf
#include "M460.h"
#include "nu_bitutil.h"
#include "crypto-misc.h"
#define GCM_VALIDATE_RET( cond ) \
    MBEDTLS_INTERNAL_VALIDATE_RET( cond, MBEDTLS_ERR_GCM_BAD_INPUT )
#define GCM_VALIDATE( cond ) \
    MBEDTLS_INTERNAL_VALIDATE( cond )
#define START       CRPT_AES_CTL_START_Msk
#define DMAEN       CRPT_AES_CTL_DMAEN_Msk
#define DMALAST     CRPT_AES_CTL_DMALAST_Msk
#define DMACC       CRPT_AES_CTL_DMACSCAD_Msk
#define START       CRPT_AES_CTL_START_Msk
#define FBIN        CRPT_AES_CTL_FBIN_Msk
#define FBOUT       CRPT_AES_CTL_FBOUT_Msk
#define GCM_MODE    (AES_MODE_GCM << CRPT_AES_CTL_OPMODE_Pos)
#define GHASH_MODE  (AES_MODE_GHASH << CRPT_AES_CTL_OPMODE_Pos)
#define CTR_MODE    (AES_MODE_CTR << CRPT_AES_CTL_OPMODE_Pos)
#define Debug_GCM_Info(x) {}

int mbedtls_gcm_setkey( mbedtls_gcm_context *ctx,
                        mbedtls_cipher_id_t cipher,
                        const unsigned char *key,
                        unsigned int keybits )
{

    int32_t i, klen;
    uint32_t keySizeOpt;

    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( key != NULL );
    GCM_VALIDATE_RET( keybits == 128 || keybits == 192 || keybits == 256 );

    klen = keybits / 8;
    ctx->keySize = klen;

    memcpy(ctx->keys, key, klen);    
    ToBigEndian((uint8_t *)ctx->keys, klen);
    
    /* Prepare key size option */
    i = klen >> 3;
    keySizeOpt = (((i >> 2) << 1) | (i & 1)) << CRPT_AES_CTL_KEYSZ_Pos;
    
    /* Basic options for AES */
    ctx->basicOpt = CRPT_AES_CTL_INSWAP_Msk | 
                    CRPT_AES_CTL_OUTSWAP_Msk | 
                    CRPT_AES_CTL_DMAEN_Msk |
                    GCM_MODE |
                    keySizeOpt;

    return( 0 );
}

int mbedtls_gcm_starts( mbedtls_gcm_context *ctx,
                int mode,
                const unsigned char *iv,
                size_t iv_len,
                const unsigned char *add,
                size_t add_len )
{
    
    
    uint32_t size;
    size_t *pSz;
    int32_t ret;
    
    if( ctx-> pcntLen == 0 ) ctx-> pcntLen = -1;
    ctx->len= 0x00;
    
    Debug_GCM_Info(("## FUNC: %s, mode=%s, pcnt=%d, ctx->len=%d\n", __FUNCTION__, (mode) ? "Enc":"Dec", ctx-> pcntLen, ctx->len));
    /* Acquire ownership of AES H/W */
    crypto_aes_acquire();
    
#if 1
    /* Force AES free */
    CRPT->AES_CTL = CRPT_AES_CTL_STOP_Msk;
#endif
    
    AES_ENABLE_INT(CRPT);
    
    if(mode == MBEDTLS_GCM_ENCRYPT)
    {
        ctx->basicOpt |= CRPT_AES_CTL_ENCRPT_Msk;
    } 
    else 
    {
        ctx->basicOpt &= ~CRPT_AES_CTL_ENCRPT_Msk;
    }
    /* Set byte count of IV */
    pSz = (size_t *)CRPT->AES_GCM_IVCNT;
    *pSz = iv_len;
    /* Set bytes count of A */
    pSz = (size_t *)CRPT->AES_GCM_ACNT;
    *pSz = add_len;
    
    AES_GCMPacker(iv, iv_len, add, add_len, 0, 0, ctx->gcm_buf, &size);
    ctx->gcm_buf_bytes = size;

    /* Configure DMA */
    CRPT->AES_SADDR = (uint32_t)ctx->gcm_buf;
    CRPT->AES_DADDR = (uint32_t)ctx->out_buf;
    CRPT->AES_FBADDR = (uint32_t)ctx->fb_buf;
    CRPT->AES_CNT   = ctx->gcm_buf_bytes;
    
    /* Set a big number for unknown P length */
    CRPT->AES_GCM_PCNT[0] = ctx-> pcntLen; //(uint32_t)-1;
    CRPT->AES_GCM_PCNT[1] = 0;

    /* Start with cascade mode */
//    if((ret = AES_Run(ctx, ctx->basicOpt | FBOUT)))
    if((ret = AES_Run(ctx, ctx->basicOpt | GCM_MODE | FBOUT | DMAEN)))
    {
        return ret;
    }

    ctx->firstFlag = 1;
    ctx->endFlag = 0;
    
    return( 0 );
}

int mbedtls_gcm_update( mbedtls_gcm_context *ctx,
                size_t input_length,
                const unsigned char *input,
                unsigned char *output )
{
    

    int32_t ret;
    int32_t len, len_aligned;
    uint32_t u32Size;
    Debug_GCM_Info(("## FUNC: %s, input_length=%d\n", __FUNCTION__, input_length));    
    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( input_length == 0 || input != NULL );
    GCM_VALIDATE_RET( input_length == 0 || output != NULL );
    
    len = (int32_t)input_length;
    /* Error if length too large */
    if( (size_t)len != input_length)
        return( MBEDTLS_ERR_GCM_BAD_INPUT );
            
    
    len_aligned = (len & 0xf) ? (int32_t)(len & (~0xful))+16:len;

    if(len == 0)
    {
        CRPT->AES_GCM_PCNT[0] = ctx->len;
        CRPT->AES_CNT = ctx->gcm_buf_bytes;
        if(ctx->firstFlag == 1)
        {
            /* No any P/C data, just use one shot to redo */
            AES_Run(ctx, ctx->basicOpt);
            ctx->gcm_buf_bytes = 0;
            
            /* The tag should be in out_buf if P len is 0 */
            memcpy(ctx->tag, ctx->out_buf, 16);
            ctx->endFlag = 1;
            ctx->firstFlag = 0;
            
        }
        else
        {
            /* zero block, it should be end of gcm. Restore feedback buffer and do GCM again with last cascade */
            memcpy(ctx->fb_buf, ctx->fb_buf2, 72);
            CRPT->AES_GCM_PCNT[0] = ctx->len;
            if((ret = AES_Run(ctx, ctx->basicOpt | FBIN | FBOUT | DMACC | DMALAST)))
            {
                return ret;
            }
            ctx->gcm_buf_bytes = 0;
            ctx->endFlag = 1;
            
            /* Output p/c data */
            memcpy(output, ctx->out_buf, len);
            
            /* Output tag */
            memcpy(ctx->tag, ctx->out_buf+len_aligned, 16);
        }
    }
    else
    {
        if(len <= MAX_GCM_BUF)
        {
            AES_GCMPacker(0, 0, 0, 0, input, len, ctx->gcm_buf, &u32Size);
            ctx->len += len;
            ctx->gcm_buf_bytes = u32Size;
        }
        else
        {

            /* Over buffer size */
            return (MBEDTLS_ERR_GCM_BAD_INPUT);
        }
            
        /* Do GCM with cascade */
        if(len & 0xf)
        {
            /* No 16 bytes alignment, it should be last */
            
            CRPT->AES_GCM_PCNT[0] = ctx->len;
            CRPT->AES_GCM_PCNT[1] = 0;
            CRPT->AES_CNT = u32Size;

            if((ret = AES_Run(ctx, ctx->basicOpt | FBIN | FBOUT | DMACC | DMALAST)))
            {
                return ret;
            }
            ctx->endFlag = 1;
        }
        else
        {
            /* backup feedback buffer. If this is last block, we could back feedback buffer to do it again. */
            memcpy(ctx->fb_buf2, ctx->fb_buf, 72);
//            ctx->firstFlag = 0;
            CRPT->AES_CNT = u32Size;

            if((ret = AES_Run(ctx, ctx->basicOpt | FBIN | FBOUT | DMACC)))
            {
                return ret;
            }

        }

        /* Output p/c data */
        memcpy(output, ctx->out_buf, len);
        
        if(ctx->endFlag)
        {
            /* Output tag */
            memcpy(ctx->tag, ctx->out_buf+len_aligned, 16);
        }
    }

    return( 0 );
}

int mbedtls_gcm_finish( mbedtls_gcm_context *ctx,
                unsigned char *tag,
                size_t tag_len )
{

    int32_t ret = 0;
    Debug_GCM_Info(("## FUNC: %s, tag_len=%d, pcnt=%d\n", __FUNCTION__, tag_len, ctx->len));    
    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( tag != NULL );
    
    if(ctx->endFlag == 0)
    {
        /* end the gcm */
        CRPT->AES_GCM_PCNT[0] = ctx->len;
        memcpy(ctx->fb_buf, ctx->fb_buf2, 72);
        if((ret = AES_Run(ctx, ctx->basicOpt | FBIN | FBOUT | DMACC | DMALAST)))
        {
            goto gcm_exit;
        }
        ctx->endFlag = 1;
        
        /* The tag should be in out_buf if P len is 0 */
        
        memcpy(ctx->tag, ctx->out_buf+ctx->gcm_buf_bytes, 16);
    }
    
    
    if(tag_len > 16)
    {
        tag_len = 16;
    }
    memcpy(tag, ctx->tag, tag_len);

gcm_exit:
    /* Release ownership of AES H/W */
    crypto_aes_release();
    
    return( ret );
}

int mbedtls_gcm_crypt_and_tag( mbedtls_gcm_context *ctx,
                       int mode,
                       size_t length,
                       const unsigned char *iv,
                       size_t iv_len,
                       const unsigned char *add,
                       size_t add_len,
                       const unsigned char *input,
                       unsigned char *output,
                       size_t tag_len,
                       unsigned char *tag )
{
    int32_t plen_cur;
    int32_t len, len_aligned;
    const uint8_t *pin;
    uint8_t *pout;

    int ret = MBEDTLS_ERR_GCM_AUTH_FAILED;

    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( iv != NULL );
    GCM_VALIDATE_RET( add_len == 0 || add != NULL );
    GCM_VALIDATE_RET( length == 0 || input != NULL );
    GCM_VALIDATE_RET( length == 0 || output != NULL );
    GCM_VALIDATE_RET( tag != NULL );
    ctx-> pcntLen = length;
    if( ( ret = mbedtls_gcm_starts( ctx, mode, iv, iv_len, add, add_len ) ) != 0 )
        return( ret );

    if( length == 0 )  /* if P length > 0, mbedtls_gcm_update not need gcm_buf_bytes for AES_CNT */
    {
        ctx->gcm_buf_bytes = 16;
    }else{
        ctx->gcm_buf_bytes = 0;
    }
    plen_cur = length;
    pin = input;
    pout = output;
    do
    {
        len = plen_cur;
        if(len > GCM_PBLOCK_SIZE)
        {
            len = GCM_PBLOCK_SIZE;
        }
        plen_cur -= len;

        /* Prepare the blocked buffer for GCM */
        memcpy(ctx->gcm_buf, pin, len);

        if( ( ret = mbedtls_gcm_update( ctx, len, pin, pout ) ) != 0 )
            return( ret );
        pin += len;
        pout += len;
    }while(plen_cur);
    
    if( ( ret = mbedtls_gcm_finish( ctx, tag, tag_len ) ) != 0 )
        return( ret );

    return( 0 );
}

int mbedtls_gcm_auth_decrypt( mbedtls_gcm_context *ctx,
                      size_t length,
                      const unsigned char *iv,
                      size_t iv_len,
                      const unsigned char *add,
                      size_t add_len,
                      const unsigned char *tag,
                      size_t tag_len,
                      const unsigned char *input,
                      unsigned char *output )
{
    int ret = MBEDTLS_ERR_GCM_AUTH_FAILED;
    unsigned char check_tag[16];
    size_t i;
    int diff;

    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( iv != NULL );
    GCM_VALIDATE_RET( add_len == 0 || add != NULL );
    GCM_VALIDATE_RET( tag != NULL );
    GCM_VALIDATE_RET( length == 0 || input != NULL );
    GCM_VALIDATE_RET( length == 0 || output != NULL );

    if( ( ret = mbedtls_gcm_crypt_and_tag( ctx, MBEDTLS_GCM_DECRYPT, length,
                                   iv, iv_len, add, add_len,
                                   input, output, tag_len, check_tag ) ) != 0 )
    {
        return( ret );
    }

    /* Check tag in "constant-time" */
    for( diff = 0, i = 0; i < tag_len; i++ )
        diff |= tag[i] ^ check_tag[i];

    if( diff != 0 )
    {
        mbedtls_platform_zeroize( output, length );
        return( MBEDTLS_ERR_GCM_AUTH_FAILED );
    }

    return( 0 );
}

int mbedtls_gcm_crypt_and_tag( mbedtls_gcm_context *ctx,
                               int mode,
                               size_t length,
                               const unsigned char *iv,
                               size_t iv_len,
                               const unsigned char *add,
                               size_t add_len,
                               const unsigned char *input,
                               unsigned char *output,
                               size_t tag_len,
                               unsigned char *tag )
{
    int ret;
    Debug_GCM_Info(("## FUNC: %s, mode=%s, length=%d, tag_len=%d, in/out=0x%x/0x%x\n", __FUNCTION__, (mode) ? "Enc":"Dec", length, tag_len, input, output));
    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( iv != NULL );
    GCM_VALIDATE_RET( add_len == 0 || add != NULL );
    GCM_VALIDATE_RET( length == 0 || input != NULL );
    GCM_VALIDATE_RET( length == 0 || output != NULL );
    GCM_VALIDATE_RET( tag != NULL );

    ctx->mode = mode;

    if(mode)
    {
        ctx->basicOpt |= CRPT_AES_CTL_ENCRPT_Msk;
    }
    else
    {
        ctx->basicOpt &= ~CRPT_AES_CTL_ENCRPT_Msk;
    }

    /* Acquire ownership of AES H/W */
    crypto_aes_acquire();   
#if 1
    /* Force AES free */
    CRPT->AES_CTL = CRPT_AES_CTL_STOP_Msk;
#endif    
    AES_ENABLE_INT(CRPT);
    
    ret = _GCM(ctx, iv, iv_len, add, add_len, input, length, output, tag, tag_len);

    /* Release ownership of AES H/W */
    crypto_aes_release();

    return (ret);
}

int mbedtls_gcm_auth_decrypt( mbedtls_gcm_context *ctx,
                              size_t length,
                              const unsigned char *iv,
                              size_t iv_len,
                              const unsigned char *add,
                              size_t add_len,
                              const unsigned char *tag,
                              size_t tag_len,
                              const unsigned char *input,
                              unsigned char *output )
{
    int ret;
    unsigned char check_tag[16];
    size_t i;
    int diff;
    Debug_GCM_Info(("## FUNC: %s\n", __FUNCTION__));
    GCM_VALIDATE_RET( ctx != NULL );
    GCM_VALIDATE_RET( iv != NULL );
    GCM_VALIDATE_RET( add_len == 0 || add != NULL );
    GCM_VALIDATE_RET( tag != NULL );
    GCM_VALIDATE_RET( length == 0 || input != NULL );
    GCM_VALIDATE_RET( length == 0 || output != NULL );

    if( ( ret = mbedtls_gcm_crypt_and_tag( ctx, MBEDTLS_GCM_DECRYPT, length,
                                           iv, iv_len, add, add_len,
                                           input, output, tag_len, check_tag ) ) != 0 )
    {
        return( ret );
    }

    /* Check tag in "constant-time" */
    for( diff = 0, i = 0; i < tag_len; i++ )
        diff |= tag[i] ^ check_tag[i];

    if( diff != 0 )
    {
        mbedtls_platform_zeroize( output, length );
        return( MBEDTLS_ERR_GCM_AUTH_FAILED );
    }

    return( 0 );
}
